# groupProject

./: .gitignore  CMakeLists.txt
docs/meeting_2/: kitchen.h
examples/: CMakeLists.txt  example.cpp  exampleWithLib.cpp  exampleWithTests.cpp  math.cpp  math.hpp  print.cpp  print.hpp  tests.cpp
src/: .gitignore  InputHandler.cpp  InputHandler.h  Kitchen.cpp  Kitchen.h  Main  MenuItem.cpp  MenuItem.h  Node.h  Order.cpp  Order.h  Printer.h  Printer.txt  Server.h  driver.cpp  finalOrder.h  items.h  kitchen.h  main.cpp  makefile  menuItem.cpp  menuItem.h  node.h  order.cpp  order.h  tests  tests.cpp
